--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,10 +1,12 @@
-@import "../../node_modules/bootstrap/scss/bootstrap";
+@import "../../node_modules/bootstrap/scss/functions";
+@import "../../node_modules/bootstrap/scss/variables";
 
-/* Warna Navbar */
-/* Menimpa gaya bawaan Bootstrap untuk navbar */
+$custom-colors:(
+    "merahtua" : #B6252A
+);
 
+$theme-colors: map-merge($theme-colors, $custom-colors);
 
-/* Warna Footer */
 footer {
     background-color: #7B0A0A; /* Ganti dengan warna footer pilihan Anda */
     color: #ffffff; /* Warna teks footer */
@@ -12,9 +14,6 @@ footer {
     padding: 10px;
 }
 
-/* Gaya Kustom untuk Navbar */
-
-/* Gaya Kustom untuk Link di Navbar */
 .custom-link {
     color: #ffffff !important; /* Warna teks link navbar */
 }
@@ -23,3 +22,4 @@ footer {
     color: #ffc107 !important; /* Warna saat link di-hover */
 }
 
+@import "../../node_modules/bootstrap/scss/bootstrap";
