--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,17 +2,18 @@
 @import "../../node_modules/bootstrap/scss/variables";
 
 $custom-colors:(
-    "merahtua" : #B6252A
+    "merahtua" : #7B0A0A,
+    "footermerah" : #6f0707
 );
 
 $theme-colors: map-merge($theme-colors, $custom-colors);
 
-footer {
-    background-color: #7B0A0A; /* Ganti dengan warna footer pilihan Anda */
-    color: #ffffff; /* Warna teks footer */
-    text-align: center;
-    padding: 10px;
-}
+// footer {
+//     background-color: #7B0A0A; /* Ganti dengan warna footer pilihan Anda */
+//     color: #ffffff; /* Warna teks footer */
+//     text-align: center;
+//     padding: 10px;
+// }
 
 .custom-link {
     color: #ffffff !important; /* Warna teks link navbar */
